# crimson

./: .dockerignore  .gitignore  .gitmodules  CMAKE_README.md  CMakeLists.txt  GenerateProjects-Linux.sh  README.md  premake5.lua
.github/workflows/: build-outBreak.yml
config/cmake/: CMakeLists.txt.in  configure_vscode.cmake  detect_environment.cmake
config/cmake/src/: main.cpp.in  sceneRegistrator.cpp.in
config/cmake/src/include/: sceneRegistrator.h.in
config/cmake/src/include/scenes/: MainScene.h.in
config/cmake/src/pch/: pch.h.in
config/games/: CMakeLists.txt.in
config/games/config/: InputActions.json  Manifest.json.in
config/games/docker/: Dockerfile.in  docker-compose.yml.in  nginx.conf
config/games/src/: componentRegistrator.cpp.in  main.cpp.in  sceneRegistrator.cpp.in
config/games/src/include/: componentRegistrator.h.in  sceneRegistrator.h.in
config/games/src/include/scenes/: MainScene.h.in
config/games/src/pch/: pch.h.in
config/games/src/scenes/: MainScene.cpp.in
config/vscode/: c_cpp_properties.json.in  launch.json.in  settings.json.in  tasks.json.in
config/wasm/: index.html
crimson/config/: InputActions.json
crimson/src/: Game.cpp  Image.cpp  Input.cpp  Logic.cpp  Scene.cpp  main.cpp
crimson/src/entities/: Player.cpp
crimson/src/include/: Game.h  Image.h  Input.h  Logic.h  Scene.h
crimson/src/include/entities/: Entity.h  Player.h
crimson/src/include/utils/: image.h  math.h
crimson/src/pch/: pch.h
crimson/src/utils/: image.cpp  math.cpp
engine/: CMakeLists.txt
engine/shaders/: sprite.frag  sprite.vert
engine/src/: AudioManager.cpp  Component.cpp  ComponentManager.cpp  Core.cpp  Entity.cpp  GLRenderer.cpp  Gizmos.cpp  Input.cpp  Map.cpp  ResourceManager.cpp  Resources.cpp  Scene.cpp  Shader.cpp  Sound.cpp  Texture.cpp
engine/src/collisions/: BVH.cpp
engine/src/collisions/shapes/: BoxShape.cpp  CircleShape.cpp
engine/src/components/: AudioSourceComponent.cpp  BoxRendererComponent.cpp  CameraComponent.cpp  CollisionComponent.cpp  InputComponent.cpp  TextureComponent.cpp  TransformComponent.cpp
engine/src/include/: AudioManager.h  Component.h  ComponentManager.h  Core.h  Engine.h  Entity.h  GLRenderer.h  Gizmos.h  Input.h  Map.h  ResourceManager.h  Resources.h  Scene.h  Shader.h  Sound.h  Texture.h  Transform.h
engine/src/include/collisions/: BVH.h  CollisionShape.h  CollisionType.h
engine/src/include/collisions/shapes/: BoxShape.h  CircleShape.h
engine/src/include/collisions/types/: BlockCollision.h  NoneCollision.h  TriggerCollision.h
engine/src/include/components/: AudioSourceComponent.h  BoxRendererComponent.h  CameraComponent.h  CollisionComponent.h  InputComponent.h  TextureComponent.h  TransformComponent.h
engine/src/include/mapCollisionTiles/: BaseTile.h  MapTile.h
engine/src/include/rendering/: RenderConstants.h
engine/src/include/ui/: Document.h  Font.h  UIContext.h  UIDocument.h  UIManager.h  UIRenderBackend.h  UIRenderer.h  UISystemInterface.h
engine/src/include/utils/: collision.h  filesystem.h  gjk.h  image.h  logger.h  math.h  rendering.h  singleton.h  tileset.h
engine/src/mapCollisionTiles/: BaseTile.cpp  MapTile.cpp
engine/src/pch/: pch.h
engine/src/ui/: UIContext.cpp  UIDocument.cpp  UIManager.cpp  UIRenderBackend.cpp  UIRenderer.cpp  UISystemInterface.cpp
engine/src/utils/: collision.cpp  filesystem.cpp  gjk.cpp  image.cpp  logger.cpp  math.cpp  rendering.cpp
games/crimson/: CMakeLists.txt
games/crimson/assets/credits/: MapAssets.txt
games/crimson/assets/maps/: TestMap.ldtk
games/crimson/config/: Manifest.json
games/crimson/src/: componentRegistrator.cpp  main.cpp  sceneRegistrator.cpp
games/crimson/src/entities/: Player.cpp  Player2.cpp
games/crimson/src/include/: componentRegistrator.h  sceneRegistrator.h
games/crimson/src/include/entities/: Player.h  Player2.h
games/crimson/src/include/levels/: Test.h
games/crimson/src/include/scenes/: Level1.h
games/crimson/src/levels/: Test.cpp
games/crimson/src/pch/: pch.h
games/crimson/src/scenes/: Level1.cpp
games/outBreak/: CMakeLists.txt
games/outBreak/assets/: credits.txt
games/outBreak/assets/ui/: start.rcss  start.rml
games/outBreak/config/: InputActions.json  Manifest.json
games/outBreak/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
games/outBreak/src/: componentRegistrator.cpp  main.cpp  sceneRegistrator.cpp
games/outBreak/src/entities/: Ball.cpp  Brick.cpp  Camera.cpp  GameManager.cpp  Paddle.cpp
games/outBreak/src/include/: componentRegistrator.h  sceneRegistrator.h
games/outBreak/src/include/entities/: Ball.h  Brick.h  Camera.h  GameManager.h  Paddle.h
games/outBreak/src/include/scenes/: GameScene.h  MainScene.h  StartScene.h
games/outBreak/src/pch/: pch.h
games/outBreak/src/scenes/: GameScene.cpp  MainScene.cpp  StartScene.cpp
launcher/: CMakeLists.txt
launcher/assets/fonts/inter/: inter.h
launcher/src/: main.cpp
launcher/src/include/utils/: filesystem.h  game_selector.h  lib.h  libLoader.h
launcher/src/pch/: pch.h
launcher/src/utils/: filesystem.cpp  game_selector.cpp  lib.cpp  libLoader.cpp
scripts/games/: GenerateGame  GenerateGame.bat  GenerateGame.ps1
scripts/projects/: GenerateProjects  GenerateProjects.bat  GenerateProjects.ps1
scripts/wasm/: ServeWasm  ServeWasm.bat
wasm/: launcher.html  serve-wasm.bat  serve-wasm.sh
